Change goals api
