# planner-api/src/main/java/pl/edu/agh/kuce/planner/goal/GoalController.java
@@ -11,6 +11,7 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import pl.edu.agh.kuce.planner.auth.Current;
 import pl.edu.agh.kuce.planner.auth.persistence.User;
+import pl.edu.agh.kuce.planner.goal.dto.GoalData;
 import pl.edu.agh.kuce.planner.goal.dto.ListResponse;
 import pl.edu.agh.kuce.planner.goal.dto.GoalInputData;
 import pl.edu.agh.kuce.planner.goal.service.GoalService;
@@ -26,10 +27,9 @@ public class GoalController {
         this.goalService = goalService;
     }
 
-    @PostMapping("/goal")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void create(@Valid @RequestBody final GoalInputData data, @Current final User user) {
-        goalService.create(data, user);
+    @PostMapping("/goals")
+    public GoalData create(@Valid @RequestBody final GoalInputData data, @Current final User user) {
+        return goalService.create(data, user);
     }
 
     @GetMapping("/goals")
@@ -37,7 +37,7 @@ public class GoalController {
         return goalService.list(user);
     }
 
-    @DeleteMapping("goal/{id}")
+    @DeleteMapping("goals/{id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void destroy(@PathVariable("id") final Integer goalId,
                         @Current final User user) throws GoalNotFoundException {
